<resources>
    <string name="app_name">pomodoro</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <!--BottomNavigationBar-->
    <string name="todo">Todo</string>
    <string name="music">Music</string>
    <string name="start">Start</string>
    <string name="history">History</string>
    <string name="setting">Setting</string>
    <!--Inside-->
    <string name="todo_list_title">Todo</string>
</resources>
