<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/todo"
        android:checked="true"
        android:icon="@drawable/todo"
        android:title="@string/todo" />

    <item
        android:id="@+id/music"
        android:checked="true"
        android:icon="@drawable/music"
        android:title="@string/music" />

    <item
        android:id="@+id/start"
        android:checked="true"
        android:icon="@drawable/start"
        android:title="@string/start" />

    <item
        android:id="@+id/history"
        android:checked="true"
        android:icon="@drawable/history"
        android:title="@string/history" />

    <item
        android:id="@+id/settings"
        android:checked="true"
        android:icon="@drawable/setting"
        android:title="@string/setting" />

</menu>